# python-project-50

./: .gitignore  Makefile  README.md  __init__.py  generate_diff.cast  json_diff.cast  nested_diff.cast  pyproject.toml  ruff.toml
.github/workflows/: hexlet-check.yml  pyci.yml
data_cast/: generate_diff.cast  plain_diff.cast
difference_calculator/: __init__.py  argparse.py  diff.py  formater.py  gendiff.py  json_util.py  parser.py  plain.py  utilites.py
difference_calculator/scripts/: main.py
gendiff/: __init__.py  gendiff.py  plain.py  stalish.py  stylish.py  utilites.py
gendiff/scripts/: main.py
tests/: __init__.py  format_json.txt  test_gendiff.py
