[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "Aleksey", email = "pdskate88@gmail.com"},
]
readme = "README.md"
repository = "https://github.com/Habited/python-project-50"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["difference_calculator"]

[project.scripts]
gendiff-h = "difference_calculator.scripts.main:main"
